--- a/package.json
+++ b/package.json
@@ -5,5 +5,24 @@
   "main": "index.js",
   "repository": "https://github.com/leeduyoung/koa-mongo-seed.git",
   "author": "dylee",
-  "license": "mit"
+  "license": "mit",
+  "scripts": {
+    "start": "node src",
+    "start:dev": "pm2 start src/index.js --watch --no-daemon"
+  },
+  "dependencies": {
+    "dotenv": "^6.0.0",
+    "jsonwebtoken": "^8.2.2",
+    "koa": "^2.5.1",
+    "koa-bodyparser": "^4.2.1",
+    "koa-router": "^7.4.0",
+    "mongoose": "^5.1.4"
+  },
+  "devDependencies": {
+    "eslint-config-standard": "^11.0.0",
+    "eslint-plugin-import": "^2.12.0",
+    "eslint-plugin-node": "^6.0.1",
+    "eslint-plugin-promise": "^3.8.0",
+    "eslint-plugin-standard": "^3.1.0"
+  }
 }
